@@ -10,7 +10,7 @@ Version 7.7 05-Mar-08
     
 2.  Applied Craig's patch to pcrecpp.cc to restore ABI compatibility with
     pre-7.6 versions, which defined a global no_arg variable instead of putting
-    it in the RE class.
+    it in the RE class. (See also #8 below.)
     
 3.  Remove a line of dead code, identified by coverity and reported by Nuno 
     Lopes. 
@@ -42,6 +42,9 @@ Version 7.7 05-Mar-08
     first patch. And a third patch - this was a messy problem.) 
     
 9.  Applied Craig's patch to remove the use of push_back(). 
+
+10. Applied Alan Lehotsky's patch to add REG_STARTEND support to the POSIX
+    matching function regexec().
 
 
 Version 7.6 28-Jan-08
